# ssp2018

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
3d_project/: CMakeLists.txt  main.cpp
3d_project/assets/meshes/: box.mtl  quadBrick_Y_up.mtl
3d_project/incl/: Application.hpp  Camera.hpp  CubeMapFramebuffer.hpp  Demo.hpp  Framebuffer.hpp  GeometricShape.hpp  Image.hpp  Mesh.hpp  ParticleSystem.hpp  Quadtree.hpp  ReflectionMesh.hpp  ShaderProgram.hpp  Sphere.hpp  Terrain.hpp  Triangle.hpp  Vertex.hpp  Window.hpp  World.hpp  fileReadUtility.hpp  geometryUtility.hpp  geometryUtility.inl  imageUtility.hpp
3d_project/incl/demos/: DynCubeEnvMappingDemo.hpp  MousePickingDemo.hpp  ParticleSystemDemo.hpp  QuadtreeDemo.hpp  TerrainDemo.hpp
3d_project/shaders/: .directory  cube_map_fs.glsl  cube_map_gs.glsl  cube_map_vs.glsl  deferred_render_fs.glsl  deferred_render_gs.glsl  deferred_render_light_fs.glsl  deferred_render_light_vs.glsl  deferred_render_vs.glsl  forward_render_fs.glsl  forward_render_gs.glsl  forward_render_vs.glsl  linestrip_fs.glsl  linestrip_gs.glsl  linestrip_vs.glsl  particle_system_fs.glsl  particle_system_gs.glsl  particle_system_vs.glsl  sphere_fs.glsl  sphere_gs.glsl  sphere_vs.glsl  terrain_fs.glsl  terrain_gs.glsl  terrain_vs.glsl
3d_project/src/: Application.cpp  Camera.cpp  CubeMapFramebuffer.cpp  Demo.cpp  Framebuffer.cpp  GeometricShape.cpp  Image.cpp  Mesh.cpp  ParticleSystem.cpp  Quadtree.cpp  ReflectionMesh.cpp  ShaderProgram.cpp  Sphere.cpp  Terrain.cpp  Triangle.cpp  Window.cpp  World.cpp  fileReadUtility.cpp  imageUtility.cpp
3d_project/src/demos/: DynCubeEnvMappingDemo.cpp  MousePickingDemo.cpp  ParticleSystemDemo.cpp  QuadtreeDemo.cpp  TerrainDemo.cpp
assets/3d_project/shaders/: cube_map_gs.glsl  cube_map_vs.glsl  deferred_render_light_fs.glsl  deferred_render_light_vs.glsl  forward_render_fs.glsl  particle_system_fs.glsl  particle_system_gs.glsl  sphere_fs.glsl  sphere_gs.glsl  sphere_vs.glsl  terrain_fs.glsl  terrain_vs.glsl
proposals/1/ecs/: CMakeLists.txt  README.md
proposals/1/ecs/examples/: CMakeLists.txt  entity_in_sky.cpp  game_core.cpp  game_core_ecs.cpp  gui_events.cpp  main.cpp
proposals/1/ecs/impl/: Entity.cpp  Entity.inl  Ids.hpp  Key.cpp  Key.inl  TypeId.cpp  TypeId.hpp  World.cpp  World.inl
proposals/1/ecs/include/ecs/: Entity.hpp  Key.hpp  World.hpp  ecs.hpp
proposals/1/ecs/src/: EntityManager.cpp  EntityManager.hpp
proposals/1/gal/: CMakeLists.txt  README.md  gal.cpp  gal.hpp
proposals/1/gal/examples/: CMakeLists.txt  basic.cpp  hello_triangle.cpp  light.cpp  stream.cpp
proposals/1/gal/include/gal/: gal.hpp
proposals/1/gal/src/: gal.cpp
proposals/1/pal/: CMakeLists.txt  README.md
proposals/1/pal/examples/: CMakeLists.txt
proposals/1/pal/include/pal/: pal.hpp
proposals/1/pal/src/: pal.cpp
src/: CMakeLists.txt
src/3d_project/: CMakeLists.txt  main.cpp
src/3d_project/assets/meshes/: sphere1.mtl
src/3d_project/incl/: .directory  Application.hpp  Camera.hpp  CubeMapFramebuffer.hpp  Demo.hpp  Framebuffer.hpp  GeometricShape.hpp  Image.hpp  Mesh.hpp  ParticleSystem.hpp  Quadtree.hpp  ReflectionMesh.hpp  ShaderProgram.hpp  Sphere.hpp  Terrain.hpp  Triangle.hpp  Vertex.hpp  Window.hpp  World.hpp  fileReadUtility.hpp  geometryUtility.hpp  geometryUtility.inl  imageUtility.hpp
src/3d_project/incl/demos/: DynCubeEnvMappingDemo.hpp  MousePickingDemo.hpp  ParticleSystemDemo.hpp  QuadtreeDemo.hpp  TerrainDemo.hpp
src/3d_project/shaders/: cube_map_fs.glsl  deferred_render_fs.glsl  deferred_render_gs.glsl  deferred_render_vs.glsl  forward_render_gs.glsl  forward_render_vs.glsl  linestrip_fs.glsl  linestrip_gs.glsl  linestrip_vs.glsl  particle_system_vs.glsl  terrain_gs.glsl
src/3d_project/src/: Application.cpp  Camera.cpp  Demo.cpp  Framebuffer.cpp  GeometricShape.cpp  Mesh.cpp  ParticleSystem.cpp  Quadtree.cpp  ReflectionMesh.cpp  ShaderProgram.cpp  Sphere.cpp  Terrain.cpp  Triangle.cpp  Window.cpp  World.cpp  fileReadUtility.cpp  imageUtility.cpp
src/3d_project/src/demos/: DynCubeEnvMappingDemo.cpp  MousePickingDemo.cpp  ParticleSystemDemo.cpp  QuadtreeDemo.cpp  TerrainDemo.cpp
src/ThisIsAClass/: CMakeLists.txt  main.cpp
src/ext/: CMakeLists.txt
src/ext/sdl2_image/: CMakeLists.txt
